# fair-launch-program

./: .gitignore  Anchor.toml  DEPLOYMENT_CHECKLIST.md  README.md  check-config-proper.ts  check-config.ts  fix-mint-price.ts  import  package-lock.json  package.json  read-config-simple.ts  revert-config.ts  revert-to-production.ts  step1-update-safety-limits.ts  step2-update-config.ts  update-config-script.ts  update-config.ts  update-safety-limits.ts  update-to-test-mode.js
docs/: ADMIN_SETUP.md
fair-launch-backend/: .gitignore  DEPLOYMENT.md  INTEGRATION_STATUS.md  README.md  event-listener.js  index.js  package.json  pool-creator.js  test-event-detection.js  test-listener.js
programs/fair_launch_program/: Cargo.toml
programs/fair_launch_program/src/: lib.rs  lib.rs.bak
scripts/: initialize-platform.js  package-lock.json  package.json
tests/: fair_launch_program.ts  update-config.ts
