[package]
name = "fair_launch_program"
version = "0.1.0"
description = "Fair Launch token creation program for X1"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "fair_launch_program"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
default = []

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = "0.30.1"
